swaggerファイル修正
