# docs/swagger.json
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ChordCheckResponse"
+                            "$ref": "#/definitions/model.ChordCheckResponse"
                         }
                     }
                 }
@@ -56,14 +56,44 @@
                 }
             }
         },
+        "model.ChordCheckResponse": {
+            "type": "object",
+            "properties": {
+                "chordWithInScaleArray": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Chord"
+                    }
+                },
+                "chordWithoutScaleArray": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Chord"
+                    }
+                }
+            }
+        },
         "model.ChordTone": {
             "type": "object",
             "properties": {
                 "degree": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.Degree"
                 },
                 "letterName": {
                     "type": "string"
+                }
+            }
+        },
+        "model.Degree": {
+            "type": "object",
+            "properties": {
+                "centsFromEqualToJust": {
+                    "type": "number",
+                    "example": -14
+                },
+                "degreeName": {
+                    "type": "string",
+                    "example": "長3度"
                 }
             }
         },
@@ -88,23 +118,6 @@
                 "scaleType": {
                     "type": "string",
                     "example": "Major"
-                }
-            }
-        },
-        "models.ChordCheckResponse": {
-            "type": "object",
-            "properties": {
-                "chordWithInScaleArray": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Chord"
-                    }
-                },
-                "chordWithoutScaleArray": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Chord"
-                    }
                 }
             }
         }
